# admon-connector

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml  todo.md  tox.ini
.github/workflows/: main.yml
admon_connector/: admon.py  interface.py  settings.py
tests/: test_foo.py  test_integration.py
